--- a/po/be.po
+++ b/po/be.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gperiodic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-12-05 22:21+0300\n"
+"POT-Creation-Date: 2015-01-07 13:09+0300\n"
 "PO-Revision-Date: 2014-06-22 22:20+0300\n"
 "Last-Translator: Uladyslau Ahromenka <ahromenka@gmail.com>\n"
 "Language-Team: Belarusian <ru@li.org>\n"
@@ -18,8 +18,8 @@ msgstr ""
 
 #: gperiodic.c:194
 #, c-format
-msgid "Periodic table application"
-msgstr ""
+msgid "Periodic table of the elements"
+msgstr "Пэрыядычная табліца элементаў"
 
 #: gperiodic.c:196
 #, c-format
